[tool.poetry]
name = "cogment-doc"
version = "1.6.0"
description = "User documentation for cogment"
authors = ["Artificial Intelligence Redefined <dev+cogment@ai-r.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.5"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.1"
cffconvert = "^1.3.3"

[tool.taskipy.tasks]
dev = "mkdocs serve"
build = "mkdocs build --clean"
lint_cff = "cffconvert -if CITATION.cff --validate"
lint_prettier = "npx prettier --check ."
lint = "task lint_cff && task lint_prettier"
lint_prettier_fix = "npx prettier --write ."
lint_fix = "task lint_prettier_fix"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

